# Echo-koc-growth

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  content_strategy_agent_demo_spec.md  docker-compose.yml  example_CLAUDE.md  onboarding_agent_demo_spec.md  orchestrator_agent_demo_spec.md  package-lock.json  retro_insight_agent_demo_spec.md  产品文档.md
backend/: Dockerfile  config.py  main.py  mock_loader.py  pyproject.toml
backend/agents/: __init__.py
backend/agents/_common/: __init__.py  source_tag.py
backend/agents/_fallback/: __init__.py  loader.py  responses.json
backend/agents/_llm/: __init__.py  client.py
backend/agents/onboarding/: __init__.py  (+4 more)
backend/api/: admin.py  log.py  mock.py  onboarding.py  orchestrator.py  profile.py  retro.py  strategy.py
backend/mock_data/: account_baseline.json  account_snapshot.json  audience_snapshot.json  comments.json  external_trends.json  historical_videos.json  new_video_for_retro.json  new_video_for_retro_vid_016.json  new_video_for_retro_vid_019.json  onboarding_conversation_template.json
backend/prompts/: __init__.py
backend/schemas/: __init__.py  insights.py  mock.py  profile.py  strategy.py
backend/scripts/: check_env.py  prepare_onboarding_cache.py  prepare_retro_cache.py  prepare_strategy_cache.py
backend/tests/: test_config.py  test_health.py  test_idea_cache_match.py  test_llm_client.py  test_llm_retry.py  test_mock_loader.py  test_onboarding_agent.py  test_orchestrator.py  test_orchestrator_router.py  test_retro_agent.py  test_source_tag_util.py  test_strategy_agent.py
(+149 files in other folders)
